@@ -529,7 +529,7 @@ CIDFont_type0_dofont (CIDFont *font)
   if (offset == 0)
     ERROR("Not a CFF/OpenType font (2)?");
 
-  cffont = cff_open(fp, offset, font->options->index);
+  cffont = cff_open(fp, offset, 0);
   if (!cffont)
     ERROR("Could not open CFF font.");
   if (!(cffont->flag & FONTTYPE_CIDFONT))
@@ -755,7 +755,7 @@ CIDFont_type0_open (CIDFont *font, const char *name,
     return -1;
   }
 
-  cffont = cff_open(sfont->stream, offset, opt->index);
+  cffont = cff_open(sfont->stream, offset, 0);
   if (!cffont) {
     ERROR("Cannot read CFF font data");
   }
@@ -934,7 +934,7 @@ CIDFont_type0_t1cdofont (CIDFont *font)
   if (offset == 0)
     ERROR("Not a CFF/OpenType font (6)?");
 
-  cffont = cff_open(fp, offset, font->options->index);
+  cffont = cff_open(fp, offset, 0);
   if (!cffont)
     ERROR("Could not open CFF font.");
   if (cffont->flag & FONTTYPE_CIDFONT)
@@ -1190,7 +1190,7 @@ CIDFont_type0_t1copen (CIDFont *font, const char *name,
     return -1;
   }
 
-  cffont = cff_open(fp, offset, opt->index);
+  cffont = cff_open(fp, offset, 0);
   if (!cffont) {
     ERROR("Cannot read CFF font data");
   }
